$Id$

2007-03-29 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Change help output, so we display the default value for
	  the --bandwidth option, and don't display it for the --interval
	  option (as the latter will always be zero because we use bandwidth
	  by default).  Updated arp-scan.1 manpage with the new output.

2007-02-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* link-dlpi.c: Wrote link-level functions for DLPI.  Compiles on
	  Solaris 9, but not fully tested.

2007-01-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* Updated ieee-oui.txt and ieee-iab.txt from the IEEE website
	  using get-oui and get-iab Perl scripts.

2006-07-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released version 1.5.

	  Tarball details:

	  -rw-rw-r--  1 rsh nta 298917 2006-07-26 13:50 arp-scan-1.5.tar.gz
	  85b0e04323ce3a423f60ab905a589856  arp-scan-1.5.tar.gz

	  Version details:

	  $Id$
	  $Id$
	  $Id$
	  $Id$
	  $Id$

	* configure.ac: Incremented version number to 1.5.1 in preparation
	  for post-1.5 changes.

2006-07-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

2006-07-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Increased version number to 1.4.5.

	* README: Added installation instructions.

2006-07-21 Roy Hills <Roy.Hills@nta-monitor.com>

	* link-bpf.c: New file containing link-level sending functions
	  for BPF as used by BSD OSes.

	* link-packet-socket.c: Changed socket protocol from SOCK_DGRAM to
	  SOCK_RAW, so the entire Ethernet frame including the header can
          be controlled.

	* arp-scan.c: Changed to build entire outgoing frame, rather than
	  just the ARP payload.

	* arp-scan.c: Modifications to support BPF link-layer.  This has been
	  tested on FreeBSD 6.1, OpenBSD 3.9, NetBSD 3.0.1 and
          Darwin 7.9.0 (MacOS 10.3.9).

	* arp-scan.c: Changed operation of the --srcaddr option.  Now it